<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compic"
        android:src="@drawable/ag3"
        android:scaleType="centerCrop"
        android:visibility="visible"
        android:alpha=".40"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/word"
            android:textColor="#000000"
            android:textSize="25sp"
            android:text="@string/agent_title"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"

            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CLICK_EXPLORE"
                android:id="@+id/Bextra"
                android:textColor="#fff"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/COURSES"
                android:background="@drawable/button_style"
                android:id="@+id/Bcource"
                android:onClick="onClick"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:text="@string/CHECK_ELIGIBILITY"
                android:background="@drawable/custom_button"
                android:id="@+id/Beligible"
                android:onClick="onClick"/>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>