<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compic"
        android:scaleType="centerCrop"
        android:src="@drawable/eng3"
        android:visibility="visible"
        android:alpha=".40"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/word"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/engineer_title"
        android:textStyle="bold"
        android:padding="80dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="300dp"
            android:src="@drawable/play"
            android:layout_marginBottom="8dp"
            android:id="@+id/Bextra"
            android:onClick="onClick"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/COURSES"
            android:background="@drawable/button_style"
            android:id="@+id/Bcource"
            android:layout_marginBottom="8dp"
            android:onClick="onClick"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CHECK_ELIGIBILITY"
            android:id="@+id/Beligible"
            android:background="@drawable/custom_button"
            android:textColor="#ffffff"
            android:onClick="onClick"/>

    </LinearLayout>
    </LinearLayout>



</RelativeLayout>